# lexicon

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  word_explorer.py
api/: main.py
src/cli/: main.py
src/http/: app.py
src/http/static/frontend/: index.html
src/lexicon/: settings.py
src/lexicon/application/prompts/: word_prompt.py
src/lexicon/application/providers/: llm_provider.py
src/lexicon/application/services/: word_explorer.py
src/lexicon/application/usecases/: explore_word_usecase.py
src/lexicon/domain/: word.py
src/lexicon/domain/models/: word.py
src/lexicon/infrastructure/inference/: langchain_provider.py  ollama_local_provider.py
src/lexicon/infrastructure/services/: ollama_client.py
static/frontend/: index.html
tests/: test_api.py  test_cli.py  test_config.py  test_models.py  test_ollama_client.py  test_ollama_provider.py  test_prompt.py  test_word_explorer.py
tools/: dev.py
