[tool.poetry]
name = "lexicon"
version = "0.2.0"
description = "Word Explorer - LLM-Agnostic API and CLI for word definitions"
authors = ["ifilipe-lype <you@example.com>"]
packages = [{include = "lexicon", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
langchain-core = "*"
langchain-ollama = "*"
pydantic-settings = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.poetry.scripts]
lexicon-cli = "cli.main:main"
web-dev = "tools.dev:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
